--- a/WindowsGameFramework7th.vcxproj.filters
+++ b/WindowsGameFramework7th.vcxproj.filters
@@ -202,6 +202,9 @@
     <Filter Include="WindowsGameFramework\0_BaseSystem\Private\4_RenderSystem\DirectXTex\DirectXTexSrc">
       <UniqueIdentifier>{f69ff6ed-9424-4018-8779-05b894bcfe17}</UniqueIdentifier>
     </Filter>
+    <Filter Include="WindowsGameFramework\2_GameObjectClasses\Camera">
+      <UniqueIdentifier>{c50cacce-4bde-43cc-8e28-5fdc214ab3a8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\csv\ApplicationData\windowData.csv">
@@ -425,6 +428,9 @@
     <ClInclude Include="Framework\BaseSystem\Private\RenderSystem\Utilities\XML\tiny\tinyxml2.h">
       <Filter>WindowsGameFramework\0_BaseSystem\Private\4_RenderSystem\Utilities\XML\tiny</Filter>
     </ClInclude>
+    <ClInclude Include="Framework\GameObjectClasses\Camera\Camera.h">
+      <Filter>WindowsGameFramework\2_GameObjectClasses\Camera</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Framework\BaseSystem\Private\MainWindow\MainWindowSystem.cpp">
@@ -591,6 +597,9 @@
     </ClCompile>
     <ClCompile Include="Framework\BaseSystem\Private\RenderSystem\DirectXTex\DirectXTex\DirectXTexWIC.cpp">
       <Filter>WindowsGameFramework\0_BaseSystem\Private\4_RenderSystem\DirectXTex\DirectXTexSrc</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\GameObjectClasses\Camera\Camera.cpp">
+      <Filter>WindowsGameFramework\2_GameObjectClasses\Camera</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
